tests/snapshots/files__if_dead_code_nested-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 1;
  v2_: bool = lt v0 c1_;
  c3_: int = const 0;
  c4_: int = const 3;
  c5_: int = const 2;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: bool = lt v0 c3_;
  c9_: bool = const true;
  c10_: int = const 1;
  c11_: int = const 2;
  v12_: int = id c11_;
  v13_: bool = id c9_;
  v14_: int = id c10_;
  br v8_ .b15_ .b16_;
.b15_:
  v12_: int = id c10_;
  v13_: bool = id c9_;
  v14_: int = id c10_;
  v17_: int = id v12_;
  v18_: int = id c10_;
  print v18_;
  print v2_;
  print v17_;
  ret;
  jmp .b19_;
.b16_:
  v17_: int = id v12_;
  v18_: int = id c10_;
  print v18_;
  print v2_;
  print v17_;
  ret;
  jmp .b19_;
.b7_:
  v20_: bool = gt v0 c5_;
  c21_: bool = const false;
  c22_: int = const 2;
  v23_: int = id c22_;
  v24_: bool = id c21_;
  v25_: int = id c3_;
  br v20_ .b26_ .b27_;
.b26_:
  v28_: bool = gt v0 c4_;
  c29_: int = const 4;
  v30_: int = id c29_;
  v31_: bool = id c21_;
  v32_: int = id c3_;
  br v28_ .b33_ .b34_;
.b33_:
  c35_: int = const 3;
  v30_: int = id c35_;
  v31_: bool = id c21_;
  v32_: int = id c3_;
  v23_: int = id v30_;
  v24_: bool = id v31_;
  v25_: int = id v32_;
  v17_: int = id v23_;
  v18_: int = id c3_;
  print v18_;
  print v2_;
  print v17_;
  ret;
  jmp .b19_;
.b34_:
  v23_: int = id v30_;
  v24_: bool = id v31_;
  v25_: int = id v32_;
  v17_: int = id v23_;
  v18_: int = id c3_;
  print v18_;
  print v2_;
  print v17_;
  ret;
  jmp .b19_;
.b27_:
  v17_: int = id v23_;
  v18_: int = id c3_;
  print v18_;
  print v2_;
  print v17_;
  ret;
.b19_:
}
