tests/snapshots/files__if_in_loop-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  c2_: int = const 1;
  c3_: int = const 10;
  v4_: bool = lt v0 c2_;
  v5_: int = id c1_;
  v6_: int = id c2_;
  v7_: int = id v0;
  v8_: int = id c1_;
  v9_: int = id c3_;
  v10_: bool = id v4_;
.b11_:
  v12_: bool = lt v5_ v9_;
  v13_: bool = id v12_;
  v14_: int = id v5_;
  v15_: int = id v6_;
  v16_: int = id v8_;
  v17_: int = id v7_;
  v18_: int = id v8_;
  v19_: int = id v9_;
  br v10_ .b20_ .b21_;
.b20_:
  v13_: bool = id v12_;
  v14_: int = id v5_;
  v15_: int = id v6_;
  v16_: int = id v6_;
  v17_: int = id v7_;
  v18_: int = id v8_;
  v19_: int = id v9_;
.b21_:
  print v16_;
  print v10_;
  v22_: int = add v5_ v6_;
  v5_: int = id v22_;
  v23_: int = id v6_;
  v24_: int = id v7_;
  v25_: int = id v8_;
  v26_: int = id v9_;
  v27_: bool = id v10_;
  v6_: int = id v23_;
  v7_: int = id v24_;
  v8_: int = id v25_;
  v9_: int = id v26_;
  v10_: bool = id v27_;
  br v12_ .b11_ .b28_;
.b28_:
  ret;
}
