tests/snapshots/files__if_in_loop-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  c2_: int = const 1;
  c3_: int = const 10;
  v4_: int = sub v0 c2_;
  v5_: bool = le v0 c1_;
  c6_: bool = const true;
  v7_: bool = id c6_;
  v8_: int = id c1_;
  v9_: int = id c2_;
  v10_: int = id c1_;
  v11_: int = id v0;
  v12_: int = id c1_;
  v13_: int = id c3_;
  br v5_ .b14_ .b15_;
.b14_:
  v7_: bool = id c6_;
  v8_: int = id c1_;
  v9_: int = id c2_;
  v10_: int = id c2_;
  v11_: int = id v0;
  v12_: int = id c1_;
  v13_: int = id c3_;
  v16_: int = id c1_;
  v17_: int = id c2_;
  v18_: int = id v0;
  v19_: int = id c1_;
  v20_: int = id c3_;
  v21_: int = id v4_;
  v22_: int = id v10_;
.b23_:
  v24_: bool = le v18_ v19_;
  print v22_;
  print v24_;
  v25_: int = add v16_ v17_;
  v26_: bool = lt v16_ v20_;
  v16_: int = id v25_;
  v27_: int = id v17_;
  v28_: int = id v18_;
  v29_: int = id v19_;
  v30_: int = id v20_;
  v31_: int = id v21_;
  v32_: int = id v22_;
  v17_: int = id v27_;
  v18_: int = id v28_;
  v19_: int = id v29_;
  v20_: int = id v30_;
  v21_: int = id v31_;
  v22_: int = id v32_;
  br v26_ .b23_ .b33_;
.b15_:
  v16_: int = id c1_;
  v17_: int = id c2_;
  v18_: int = id v0;
  v19_: int = id c1_;
  v20_: int = id c3_;
  v21_: int = id v4_;
  v22_: int = id v10_;
  jmp .b23_;
.b33_:
  ret;
}
