tests/snapshots/files__if_invariant_do_pull_out-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@unrelated_fn(v0: int): int {
  c1_: int = const 4;
  v2_: int = div v0 c1_;
  ret v2_;
}
@other_unrelated_fn(v0: int): int {
  c1_: int = const 3;
  v2_: int = mul c1_ v0;
  c3_: int = const 5;
  v4_: int = div v2_ c3_;
  ret v4_;
}
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  v3_: int = abs v0;
  c4_: int = const 2;
  v5_: int = mul c4_ v3_;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: int = add v3_ v5_;
  c9_: int = const 4;
  v10_: int = div v3_ c9_;
  v11_: int = add v10_ v8_;
  v12_: int = id v11_;
  print v12_;
  ret;
  jmp .b13_;
.b7_:
  v14_: int = sub v5_ v0;
  c15_: int = const 3;
  v16_: int = mul c15_ v0;
  c17_: int = const 5;
  v18_: int = div v16_ c17_;
  v19_: int = add v14_ v18_;
  v12_: int = id v19_;
  print v12_;
  ret;
.b13_:
}
