tests/snapshots/files__if_invariant_dont_pull_out-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@unrelated_fn(v0: int, v1: int): int {
  c2_: int = const 3;
  v3_: int = div v1 c2_;
  v4_: int = div v0 v3_;
  ret v4_;
}
@other_unrelated_fn(v0: int, v1: int): int {
  c2_: int = const 5;
  v3_: int = div v0 c2_;
  v4_: int = div v1 v3_;
  ret v4_;
}
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = gt v0 c1_;
  v3_: int = abs v0;
  c4_: int = const 2;
  v5_: int = mul c4_ v3_;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: int = sub v0 v0;
  v9_: int = add v5_ v8_;
  c10_: int = const 3;
  v11_: int = div v9_ c10_;
  v12_: int = div v0 v11_;
  v13_: int = id v12_;
  print v13_;
  ret;
  jmp .b14_;
.b7_:
  v15_: int = abs v0;
  v16_: int = add v15_ v5_;
  v17_: int = add v0 v16_;
  c18_: int = const 5;
  v19_: int = div v0 c18_;
  v20_: int = div v17_ v19_;
  v13_: int = id v20_;
  print v13_;
  ret;
.b14_:
}
