tests/snapshots/files__if_invariant_dont_pull_out-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@unrelated_fn(v0: int, v1: int): int {
  c2_: int = const 3;
  v3_: int = div v1 c2_;
  v4_: int = div v0 v3_;
  ret v4_;
}
@other_unrelated_fn(v0: int, v1: int): int {
  c2_: int = const 5;
  v3_: int = div v0 c2_;
  v4_: int = div v1 v3_;
  ret v4_;
}
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = gt v0 c1_;
  v3_: int = abs v0;
  c4_: int = const 2;
  v5_: int = mul c4_ v3_;
  br v2_ .b6_ .b7_;
.b6_:
  c8_: int = const 3;
  v9_: int = div v5_ c8_;
  v10_: int = div v3_ v9_;
  v11_: int = id v10_;
  print v11_;
  ret;
  jmp .b12_;
.b7_:
  c13_: int = const 5;
  v14_: int = div v0 c13_;
  v15_: int = div v5_ v14_;
  v11_: int = id v15_;
  print v11_;
  ret;
.b12_:
}
