tests/snapshots/files__if_push_in-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const -1;
  c2_: int = const 0;
  v3_: bool = lt c2_ v0;
  c4_: int = const 2;
  v5_: int = mul c4_ v0;
  br v3_ .b6_ .b7_;
.b6_:
  c8_: int = const 5;
  v9_: int = mul c8_ v5_;
  v10_: int = id v9_;
.b11_:
  v12_: bool = lt c1_ v10_;
  br v12_ .b13_ .b14_;
.b13_:
  c15_: int = const 10;
  v16_: int = mul c15_ v10_;
  v17_: int = id v16_;
  print v17_;
  ret;
  jmp .b18_;
.b14_:
  c19_: int = const 37;
  v20_: int = mul c19_ v10_;
  v17_: int = id v20_;
  print v17_;
  ret;
  jmp .b18_;
.b7_:
  c21_: int = const 3;
  v22_: int = neg c21_;
  v23_: int = mul v22_ v5_;
  v10_: int = id v23_;
  jmp .b11_;
.b18_:
}
