tests/snapshots/files__implicit-return-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@pow(v0: int, v1: int) {
.b2_:
  c3_: int = const 0;
  c4_: int = const 1;
  v5_: int = sub v1 c4_;
  v6_: bool = lt c3_ v5_;
  v7_: int = id v0;
  v8_: int = id c3_;
  v9_: int = id v0;
  v10_: int = id v1;
  br v6_ .b11_ .b12_;
.b11_:
  c13_: int = const 1;
  v14_: int = sub v1 c13_;
  v15_: int = id v0;
  v16_: int = id c3_;
  v17_: int = id v0;
  v18_: int = id v1;
  v19_: int = id v14_;
.b20_:
  v21_: int = mul v15_ v17_;
  c22_: int = const 1;
  v23_: int = add c22_ v16_;
  v24_: bool = lt v23_ v19_;
  v15_: int = id v21_;
  v16_: int = id v23_;
  v17_: int = id v17_;
  v18_: int = id v18_;
  v19_: int = id v19_;
  br v24_ .b20_ .b25_;
.b25_:
  v7_: int = id v15_;
  v8_: int = id v16_;
  v9_: int = id v0;
  v10_: int = id v1;
  print v7_;
  ret;
  jmp .b26_;
.b12_:
  print v7_;
  ret;
.b26_:
}
@main {
.b0_:
  c1_: int = const 4;
  c2_: int = const 0;
  c3_: int = const 15;
  v4_: int = id c1_;
  v5_: int = id c2_;
  v6_: int = id c1_;
  v7_: int = id c3_;
.b8_:
  v9_: int = mul v4_ v6_;
  c10_: int = const 1;
  v11_: int = add c10_ v5_;
  c12_: int = const 14;
  v13_: bool = lt v11_ c12_;
  v4_: int = id v9_;
  v5_: int = id v11_;
  v6_: int = id v6_;
  v7_: int = id v7_;
  br v13_ .b8_ .b14_;
.b14_:
  print v4_;
  ret;
}
